--- a/src/pages/footer/footer.css
+++ b/src/pages/footer/footer.css
@@ -12,7 +12,7 @@
   display: flex;
   gap: 5rem;
   flex-direction: column;
-  justify-content: end;
+  justify-content: flex-end;
 }
 .footer-title {
   font-size: 1.4rem;
